# FastAPI-ToDo-app

./: .gitignore  README.md
core/: .env.sample  .flake8  .pylintrc  alembic.ini  data_fake_generaor.py  main.py  openapi.json  postman_collection.json  pyproject.toml  sqlite.db
core/auth/: basic_auth.py  jwt_auth.py  jwt_cookie_auth.py  token_auth.py
core/core/: config.py  db.py
core/migrates/: env.py
core/migrates/versions/: 0b1897b27c24_create_tokenmodel_in_users_path.py  516982596ffa_create_usermodel_table.py  52cd76b8ce99_create_usermodel_table.py  88f862054f46_added_user_relation.py  afef3646cf2c_create_task_table.py
core/tasks/: models.py  routs.py  schemas.py
core/users/: models.py  routs.py  schemas.py
docs/: 08-02-.py  08-03.py  08-04.py  08-05.py  09-03.py  09-04.py  09-11.py
docs/sample login/: login.html
