[project]
name = "FastAPI-ToDo-app"
version = "0.116.1"
description = "A FastAPI-based service"
requires-python = "==3.12.4"
dependencies = [
  "fastapi[standard]",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic>=2",
  "pydantic-settings>=2.10.1",
  "alembic>=1.16.4",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.10.1",
  "bcrypt==3.2.2",
]

[tool.uv]
dev-dependencies = ["pytest", "httpx", "ruff"]
